Bug 205623 - Runpm broken on Nvidia GPUs with 0x1901 Intel bridge controller
Summary: Runpm broken on Nvidia GPUs with 0x1901 Intel bridge controller
Status: RESOLVED CODE_FIX
Alias: None
Product: Power Management
Classification: Unclassified
Component: Run-Time-PM (show other bugs)
Hardware: x86-64 Linux
: P1 normal
Assignee: Rafael J. Wysocki
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-11-22 00:21 UTC by Karol Herbst
Modified: 2020-04-14 10:13 UTC (History)
5 users (show)

See Also:
Kernel Version: 5.3
Subsystem:
Regression: No
Bisected commit-id:


Attachments
lspci -tvnn (1.96 KB, text/plain)
2019-11-22 00:21 UTC, Karol Herbst
Details
lspci -nn (3.36 KB, text/plain)
2019-11-22 00:22 UTC, Karol Herbst
Details
dmesg (449.52 KB, text/plain)
2019-11-22 00:22 UTC, Karol Herbst
Details
acpidump of the XPS 9560 (280.16 KB, application/x-xz)
2019-11-22 00:25 UTC, Karol Herbst
Details
lspci -s 00:01.0 -vv (4.49 KB, text/plain)
2019-11-22 13:36 UTC, Karol Herbst
Details

Description Karol Herbst 2019-11-22 00:21:07 UTC
Created attachment 286009 [details]
lspci -tvnn

Runpm is doesn't work on laptops with an Nvidia GPU and the Intel bridge controller with the PCI device ID 0x1901.

This issue was a discussed a lot on mailing lists and I will dump information here as I go.
Comment 1 Karol Herbst 2019-11-22 00:22:21 UTC
Created attachment 286011 [details]
lspci -nn
Comment 2 Karol Herbst 2019-11-22 00:22:56 UTC
Created attachment 286013 [details]
dmesg
Comment 3 Karol Herbst 2019-11-22 00:25:45 UTC
Created attachment 286015 [details]
acpidump of the XPS 9560
Comment 4 Karol Herbst 2019-11-22 13:36:43 UTC
Created attachment 286023 [details]
lspci -s 00:01.0 -vv
Comment 5 Karol Herbst 2020-04-14 10:13:59 UTC
fixed in 5.7-rc1

Note You need to log in before you can comment on or make changes to this bug.